--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quack-tastica Loja Duck</title>
+  <title>Quack-Tastica Loja Duck</title>
   <link rel="stylesheet" href="css/pallete.css" />
   <link rel="stylesheet" href="css/fonts.css" />
   <link rel="stylesheet" href="css/kayframes.css" />
@@ -93,7 +93,7 @@
       </div>
       <div class="product-card">
         <img src="img/patoS.png" alt="Professor" class="product-img">
-        <h3>Melhro Professor Quack-Tastico</h3>
+        <h3>Melhor Professor Quack-Tastico</h3>
         <p>R$24,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
@@ -124,9 +124,9 @@
 
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Quack-tastica Loja Duck. Todos os Diretos Reservados.</p>
+      <p>&copy; 2025 Quack-Tastica Loja Duck. Todos os Diretos Reservados.</p>
       <div class="social-links">
-        <a href="https://www.instagram.com" target="_blank" aria-label="Facebook">
+        <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
           <img src="img/facebook-icon.png" alt="Facebook">
         </a>
         <a href="https://www.whatsapp.com" target="_blank" aria-label="WhatsApp">
