--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quack-Tastica Loja Duck</title>
+  <title>https://github.com/MarcellaH021/Quack-Tastica-Loja-Duck.git</title>
   <link rel="stylesheet" href="css/pallete.css" />
   <link rel="stylesheet" href="css/fonts.css" />
   <link rel="stylesheet" href="css/kayframes.css" />
@@ -28,7 +28,7 @@
   </header>
   <section id="home" class="hero">
     <div class="hero-content">
-      <h2>Quack-Tasticas Ofertas te Aguardam!</h2>
+      <h2>Quack-Táticas Ofertas te Aguardam!</h2>
       <p>Encontre o seu patinho de borracha perfeito hoje.</p>
       <a href="#products" class="btn">Compre Agora</a>
     </div>
