--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="logo-container">
       <img src="img/logo.png" alt="Loja dos Patos" class="logo">
     </div>
-    <h1>Quack-Tastica Loja Duck</h1>
+    <h1>Quack-Tástica Loja Duck</h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -39,61 +39,61 @@
     <div class="product-grid">
       <div class="product-card">
         <img src="img/pato1.png" alt="Amarelo" class="product-img">
-        <h3>Amarelho Quack-Tastico</h3>
+        <h3>Amarelho Quack-Tástico</h3>
         <p>R$5,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato2.png" alt="Pirata" class="product-img">
-        <h3>Pirata Quack-Tastico</h3>
+        <h3>Pirata Quack-Tástico</h3>
         <p>R$7,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato3.png" alt="Superheroi" class="product-img">
-        <h3>Superheroi Quack-Tastico</h3>
+        <h3>Superheroi Quack-Tástico</h3>
         <p>R$8,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato4.png" alt="Grinch" class="product-img">
-        <h3>Grinch Quack-Tastico</h3>
+        <h3>Grinch Quack-Tástico</h3>
         <p>R$12,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato5.png" alt="Batman" class="product-img">
-        <h3>Batman Quack-Tastico</h3>
+        <h3>Batman Quack-Tástico</h3>
         <p>R$13,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato6.png" alt="QuackQuack" class="product-img">
-        <h3>QuackQuack Quack-Tastico</h3>
+        <h3>QuackQuack Quack-Tástico</h3>
         <p>R$15,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato7.png" alt="Mecanico" class="product-img">
-        <h3>Mecânico Quack-Tastico</h3>
+        <h3>Mecânico Quack-Tástico</h3>
         <p>R$17,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato8.png" alt="TI" class="product-img">
-        <h3>TI Quack-Tastico</h3>
+        <h3>TI Quack-Tástico</h3>
         <p>R$18,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/pato9.png" alt="FatasQuack" class="product-img">
-        <h3>FatasQuack Quack-Tastico</h3>
+        <h3>FatasQuack Quack-Tástico</h3>
         <p>R$19,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
       <div class="product-card">
         <img src="img/patoS.png" alt="Professor" class="product-img">
-        <h3>Melhor Professor Quack-Tastico</h3>
+        <h3>Melhor Professor Quack-Tástico</h3>
         <p>R$24,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
@@ -124,7 +124,7 @@
 
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Quack-Tastica Loja Duck. Todos os Diretos Reservados.</p>
+      <p>&copy; 2025 Quack-Tástica Loja Duck. Todos os Diretos Reservados.</p>
       <div class="social-links">
         <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
           <img src="img/facebook-icon.png" alt="Facebook">
