--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>https://github.com/MarcellaH021/Quack-Tastica-Loja-Duck.git</title>
+  <title>Quack-Tástica Loja Duck</title>
   <link rel="stylesheet" href="css/pallete.css" />
   <link rel="stylesheet" href="css/fonts.css" />
   <link rel="stylesheet" href="css/kayframes.css" />
