Leve tonalizacao na cor das letras menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="home" class="hero">
     <div class="hero-content">
       <h2>Quack-Táticas Ofertas te Aguardam!</h2>
-      <p>Encontre o seu patinho de borracha perfeito hoje.</p>
+      <p>Encontre o seu patinho de borracha perfeito hoje!</p>
       <a href="#products" class="btn">Compre Agora</a>
     </div>
   </section>
@@ -39,7 +39,7 @@
     <div class="product-grid">
       <div class="product-card">
         <img src="img/pato1.png" alt="Amarelo" class="product-img">
-        <h3>Amarelho Quack-Tástico</h3>
+        <h3>Amarelo Quack-Tástico</h3>
         <p>R$5,99</p>
         <button class="btn">Add ao Carrinho</button>
       </div>
