--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   <footer>
     <div class="footer-content">
-      <p>&copy; 2025 Quack-Tástica Loja Duck. Todos os Diretos Reservados.</p>
+      <p>&copy; 2025 Quack-Tástica Loja Duck. Todos os Diretos Reservados para TSI 2024. Trabalho de Faculdade.</p>
       <div class="social-links">
         <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
           <img src="img/facebook-icon.png" alt="Facebook">
